--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,11 +14,23 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "express": "^4.18.1"
+        "@prisma/client": "^4.3.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.2",
+        "express": "^4.18.1",
+        "express-session": "^1.17.3",
+        "morgan": "^1.10.0",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.5",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.14",
+        "@types/passport": "^1.0.10",
+        "@types/passport-google-oauth20": "^2.0.11",
         "prisma": "^4.3.1"
     }
 }
