--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,18 +19,22 @@
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
-        "passport": "^0.6.0",
-        "passport-google-oauth20": "^2.0.0"
+        "passport": "0.5.0",
+        "passport-google-oauth20": "2.0.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.5",
+        "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.14",
         "@types/passport": "^1.0.10",
         "@types/passport-google-oauth20": "^2.0.11",
+        "i": "^0.3.7",
+        "npm": "^8.19.1",
         "prisma": "^4.3.1"
     }
 }
