--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,8 +33,10 @@
         "@types/node": "^18.7.14",
         "@types/passport": "^1.0.10",
         "@types/passport-google-oauth20": "^2.0.11",
-        "i": "^0.3.7",
-        "npm": "^8.19.1",
-        "prisma": "^4.3.1"
+        "prisma": "^4.3.1",
+        "typescript": "^4.8.2"
+    },
+    "engines": {
+        "node": "16.13.1"
     }
 }
