--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,9 +8,11 @@
         "start": "node dist/index.js",
         "watch": "tsc -w",
         "dev": "nodemon dist/index.js",
-        "build": "tsc",
+        "build": "yarn install && tsc",
+        "prestart": "npm run build", 
         "lint": "eslint ./src --ext .js,.ts",
         "lint-fix": "eslint ./src --ext .js,.ts --fix",
+        "postinstall": "tsc", 
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
