BREAKING CHANGE: changed whole ui

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
-      "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
+      "lib": ["dom", "es6", "es2017", "esnext.asynciterable","ES2021.String"],
       "skipLibCheck": true,
       "sourceMap": true,
       "outDir": "./dist",
