--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,14 +9,15 @@
         "watch": "tsc -w",
         "dev": "nodemon dist/index.js",
         "build": "yarn install && tsc",
-        "prestart": "npm run build", 
+        "prestart": "npm run build",
         "lint": "eslint ./src --ext .js,.ts",
         "lint-fix": "eslint ./src --ext .js,.ts --fix",
-        "postinstall": "tsc", 
+        "postinstall": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "@prisma/client": "^4.3.1",
+        "axios": "^0.27.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
